--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
             <div class="sections-group">
                 <section class="get">
                     <div class="container">
-                        <div class="get__inner">
-                            <svg class="_linear-bg" width="1220" height="314" viewBox="0 0 1220 314" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <div class="get__wrap">
+                            <div class="get__inner">
+                                <svg class="_linear-bg" width="1220" height="314" viewBox="0 0 1220 314" fill="none" xmlns="http://www.w3.org/2000/svg">
     <rect width="1220" height="314" rx="15" fill="url(#paint0_linear_159_1742)"/>
     <rect width="1220" height="314" rx="15" fill="url(#paint1_radial_159_1742)" fill-opacity="0.67"/>
     <rect width="1220" height="314" rx="15" fill="url(#paint2_radial_159_1742)" fill-opacity="0.38"/>
@@ -252,50 +253,52 @@
     </defs>
 </svg>
 
-                            <div class="get__title _fade">
-                                AT THE END YOU GET
-                            </div>
-                            <div class="get__items">
-                                <div class="offer-item _fade">
-                                    <div class="offer-item__icon">
-                                        <img src="img/get-icon.svg" alt="">
+                                <div class="get__title _fade">
+                                    AT THE END YOU GET
+                                </div>
+                                <div class="get__items">
+                                    <div class="offer-item _fade">
+                                        <div class="offer-item__icon">
+                                            <img src="img/get-icon.svg" alt="">
+                                        </div>
+                                        <div class="offer-item__info">
+                                            <div class="text18 semi-bold-text">
+                                                Delicately <br> shaped crowns
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="offer-item__info">
-                                        <div class="text18 semi-bold-text">
-                                            Delicately <br> shaped crowns
+                                    <div class="offer-item _fade">
+                                        <div class="offer-item__icon">
+                                            <img src="img/get-icon2.svg" alt="">
+                                        </div>
+                                        <div class="offer-item__info">
+                                            <div class="text18 semi-bold-text">
+                                                Natural teeth <br> translucency
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="offer-item _fade">
+                                        <div class="offer-item__icon">
+                                            <img src="img/get-icon3.svg" alt="">
+                                        </div>
+                                        <div class="offer-item__info">
+                                            <div class="text18 semi-bold-text">
+                                                Highest <br> durability
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="offer-item _fade">
+                                        <div class="offer-item__icon">
+                                            <img src="img/get-icon4.svg" alt="">
+                                        </div>
+                                        <div class="offer-item__info">
+                                            <div class="text18 semi-bold-text">
+                                                Ideal <br> bite
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="offer-item _fade">
-                                    <div class="offer-item__icon">
-                                        <img src="img/get-icon2.svg" alt="">
-                                    </div>
-                                    <div class="offer-item__info">
-                                        <div class="text18 semi-bold-text">
-                                            Natural teeth <br> translucency
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="offer-item _fade">
-                                    <div class="offer-item__icon">
-                                        <img src="img/get-icon3.svg" alt="">
-                                    </div>
-                                    <div class="offer-item__info">
-                                        <div class="text18 semi-bold-text">
-                                            Highest <br> durability
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="offer-item _fade">
-                                    <div class="offer-item__icon">
-                                        <img src="img/get-icon4.svg" alt="">
-                                    </div>
-                                    <div class="offer-item__info">
-                                        <div class="text18 semi-bold-text">
-                                            Ideal <br> bite
-                                        </div>
-                                    </div>
-                                </div>
+
                             </div>
                             <img src="img/get-badge.svg" alt="" class="get__badge">
                         </div>
