--- a/blog.html
+++ b/blog.html
@@ -99,10 +99,10 @@
                         </filter>
                         <radialGradient id="paint0_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(718.5 335.5) rotate(90) scale(379.5)">
                             <stop stop-color="#5BECF1">
-                                <animate attributeName="stop-color" values="#7A5FFF; #01FF89; #7A5FFF" dur="3.5s" repeatCount="indefinite"></animate>
+                                <animate attributeName="stop-color" values="#7A5FFF; #5BECF1 ; #7A5FFF" dur="4.5s" repeatCount="indefinite"></animate>
                             </stop>
                             <stop offset="1" stop-color="#5BECF1" stop-opacity="0">
-                                <animate attributeName="stop-color" values="#E93072; #01FF89; #E93072" dur="3.5s" repeatCount="indefinite"></animate>
+                                <animate attributeName="stop-color" values="#E93072; #5BECF1 ; #E93072" dur="4.5s" repeatCount="indefinite"></animate>
                             </stop>
                         </radialGradient>
                         <radialGradient id="paint1_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1215.5 500.5) rotate(90) scale(379.5)">
@@ -110,7 +110,7 @@
                                 <animate attributeName="stop-color" values="#FF64C3; #E93072; #FF64C3" dur="3.5s" repeatCount="indefinite"></animate>
                             </stop>
                             <stop offset="1" stop-color="#FF64C3" stop-opacity="0">
-                                <animate attributeName="stop-color" values="#FF64C3; #01FF89; #FF64C3" dur="3.5s" repeatCount="indefinite"></animate>
+                                <animate attributeName="stop-color" values="#FF64C3; #E93072; #FF64C3" dur="3.5s" repeatCount="indefinite"></animate>
                             </stop>
                         </radialGradient>
                     </defs>
