--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
                                 <img class="teeth__img2" src="img/teeth2.png" alt="">
                             </div>
                         </div>
+                        <div class="main__items">
+                            <div class="main-item">
+                                <div class="main-item__top _start">
+                                    <span class="main-item__num">85</span>
+                                    <span class="main-item__measure">%</span>
+                                </div>
+                                <div class="main-item__desc">
+                                    <div class="text15">referral patients</div>
+                                </div>
+                            </div>
+                            <div class="main-item">
+                                <div class="main-item__top">
+                                    <span class="main-item__num">150 000</span>
+                                    <span class="main-item__measure">+</span>
+                                </div>
+                                <div class="main-item__desc">
+                                    <div class="text15">crowns performed</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
