--- a/about.html
+++ b/about.html
@@ -62,94 +62,93 @@
         <main class="content">
 
             <section class="about-main">
-                <div class="about-main__inner">
-                    <div class="container">
-                        <div class="about-main__content">
-                            <div class="_fade text47 bold-text font2">
-                                Welcome to CoDental and CoBeauty Turkey
-                            </div>
-                            <div class="_fade about-main__desc">
-                                <div class="text24 semi-bold-text">
-                                    An authorized medical establishment where we believe in the power of beauty
+                <div class="about-main__top">
+                    <div class="about-main__inner">
+                        <div class="container">
+                            <div class="about-main__content">
+                                <div class="_fade text47 bold-text font2">
+                                    Welcome to CoDental and CoBeauty Turkey
+                                </div>
+                                <div class="_fade about-main__desc">
+                                    <div class="text24 semi-bold-text">
+                                        An authorized medical establishment where we believe in the power of beauty
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <svg class="about-main__gradients" width="1440" height="627" viewBox="0 0 1440 627" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <mask id="mask0_185_184" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="627">
+                                <rect width="1440" height="627" fill="#E4FAFD" fill-opacity="0.9"/>
+                            </mask>
+                            <g mask="url(#mask0_185_184)">
+                                <g opacity="0.6" filter="url(#filter0_f_185_184)">
+                                    <circle cx="1038" cy="149" r="340" fill="url(#paint0_radial_185_184)"/>
+                                </g>
+                                <g filter="url(#filter1_f_185_184)">
+                                    <circle cx="847.5" cy="511.5" r="447.5" fill="url(#paint1_radial_185_184)"/>
+                                </g>
+                                <g opacity="0.3" filter="url(#filter2_f_185_184)">
+                                    <circle cx="399" cy="578" r="306" fill="url(#paint2_radial_185_184)"/>
+                                </g>
+                                <g filter="url(#filter3_f_185_184)">
+                                    <circle cx="1280.5" cy="408.5" r="447.5" fill="url(#paint3_radial_185_184)"/>
+                                </g>
+                            </g>
+                            <defs>
+                                <filter id="filter0_f_185_184" x="397" y="-492" width="1282" height="1282" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                                    <feGaussianBlur stdDeviation="150.5" result="effect1_foregroundBlur_185_184"/>
+                                </filter>
+                                <filter id="filter1_f_185_184" x="389" y="53" width="917" height="917" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                                    <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_185_184"/>
+                                </filter>
+                                <filter id="filter2_f_185_184" x="-207" y="-28" width="1212" height="1212" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                                    <feGaussianBlur stdDeviation="150" result="effect1_foregroundBlur_185_184"/>
+                                </filter>
+                                <filter id="filter3_f_185_184" x="822" y="-50" width="917" height="917" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                    <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                    <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                                    <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_185_184"/>
+                                </filter>
+                                <radialGradient id="paint0_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1038 149) rotate(90) scale(340)">
+                                    <stop stop-color="#FF365F">
+                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
+                                    </stop>
+                                    <stop offset="1" stop-color="#FF3661" stop-opacity="0">
+                                        <animate attributeName="stop-color" values="#01FF89; #FF64C3; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
+                                    </stop>
+                                </radialGradient>
+                                <radialGradient id="paint1_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(847.5 511.5) rotate(90) scale(447.5)">
+                                    <stop stop-color="#5BECF1">
+                                        <animate attributeName="stop-color" values="#01FF89; #FF64C3; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
+                                    </stop>
+                                    <stop offset="1" stop-color="#5BECF1" stop-opacity="0">
+                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
+                                    </stop>
+                                </radialGradient>
+                                <radialGradient id="paint2_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(399 578) rotate(90) scale(306)">
+                                    <stop stop-color="#1470DB">
+                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
+                                    </stop>
+                                    <stop offset="1" stop-color="#1470DB" stop-opacity="0">
+                                        <animate attributeName="stop-color" values="#7A5FFF; #FF64C3; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
+                                    </stop>
+                                </radialGradient>
+                                <radialGradient id="paint3_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1280.5 408.5) rotate(90) scale(447.5)">
+                                    <stop stop-color="#FF64C3"/>
+                                    <stop offset="1" stop-color="#FF64C3" stop-opacity="0"/>
+                                </radialGradient>
+                            </defs>
+                        </svg>
                     </div>
-                    <svg class="about-main__gradients" width="1440" height="627" viewBox="0 0 1440 627" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <mask id="mask0_185_184" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="627">
-                            <rect width="1440" height="627" fill="#E4FAFD" fill-opacity="0.9"/>
-                        </mask>
-                        <g mask="url(#mask0_185_184)">
-                            <g opacity="0.6" filter="url(#filter0_f_185_184)">
-                                <circle cx="1038" cy="149" r="340" fill="url(#paint0_radial_185_184)"/>
-                            </g>
-                            <g filter="url(#filter1_f_185_184)">
-                                <circle cx="847.5" cy="511.5" r="447.5" fill="url(#paint1_radial_185_184)"/>
-                            </g>
-                            <g opacity="0.3" filter="url(#filter2_f_185_184)">
-                                <circle cx="399" cy="578" r="306" fill="url(#paint2_radial_185_184)"/>
-                            </g>
-                            <g filter="url(#filter3_f_185_184)">
-                                <circle cx="1280.5" cy="408.5" r="447.5" fill="url(#paint3_radial_185_184)"/>
-                            </g>
-                        </g>
-                        <defs>
-                            <filter id="filter0_f_185_184" x="397" y="-492" width="1282" height="1282" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                <feGaussianBlur stdDeviation="150.5" result="effect1_foregroundBlur_185_184"/>
-                            </filter>
-                            <filter id="filter1_f_185_184" x="389" y="53" width="917" height="917" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_185_184"/>
-                            </filter>
-                            <filter id="filter2_f_185_184" x="-207" y="-28" width="1212" height="1212" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                <feGaussianBlur stdDeviation="150" result="effect1_foregroundBlur_185_184"/>
-                            </filter>
-                            <filter id="filter3_f_185_184" x="822" y="-50" width="917" height="917" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
-                                <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_185_184"/>
-                            </filter>
-                            <radialGradient id="paint0_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1038 149) rotate(90) scale(340)">
-                                <stop stop-color="#FF365F">
-                                    <animate attributeName="stop-color" values="#7A5FFF; #01FF89; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                                <stop offset="1" stop-color="#FF3661" stop-opacity="0">
-                                    <animate attributeName="stop-color" values="#01FF89; #7A5FFF; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                            </radialGradient>
-                            <radialGradient id="paint1_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(847.5 511.5) rotate(90) scale(447.5)">
-                                <stop stop-color="#5BECF1">
-                                    <animate attributeName="stop-color" values="#01FF89; #7A5FFF; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                                <stop offset="1" stop-color="#5BECF1" stop-opacity="0">
-                                    <animate attributeName="stop-color" values="#7A5FFF; #01FF89; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                            </radialGradient>
-                            <radialGradient id="paint2_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(399 578) rotate(90) scale(306)">
-                                <stop stop-color="#1470DB">
-                                    <animate attributeName="stop-color" values="#7A5FFF; #01FF89; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                                <stop offset="1" stop-color="#1470DB" stop-opacity="0">
-                                    <animate attributeName="stop-color" values="#7A5FFF; #01FF89; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                            </radialGradient>
-                            <radialGradient id="paint3_radial_185_184" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1280.5 408.5) rotate(90) scale(447.5)">
-                                <stop stop-color="#FF64C3">
-                                    <animate attributeName="stop-color" values="#7A5FFF; #01FF89; #7A5FFF" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                                <stop offset="1" stop-color="#FF64C3" stop-opacity="0">
-                                    <animate attributeName="stop-color" values="#01FF89; #7A5FFF; #01FF89" dur="2.5s" repeatCount="indefinite"></animate>
-                                </stop>
-                            </radialGradient>
-                        </defs>
-                    </svg>
+                    <img src="img/about-bg4.png" alt="" class="about-main__img _desktop">
+                    <img src="img/about-bg5.png" alt="" class="about-main__img _mob">
                 </div>
-                <img src="img/about-bg4.png" alt="" class="about-main__img">
                 <div class="breadcrumbs">
                     <div class="container">
                         <div class="breadcrumbs__inner">
