--- a/blog-item.html
+++ b/blog-item.html
@@ -63,17 +63,10 @@
         </header>
         <main class="content">
 
-            <section class="contacts-page">
+            <section class="contacts-page blog-item">
                 <div class="container">
                     <div class="contacts-page__info">
-                        <div class="text47 bold-text font2">
-                            Our blog
-                        </div>
-                        <div class="main__text">
-                            <div class="text23">
-                                Discover the Ultimate Guide to Dental and Aesthetic Treatments in Turkey: Your Path to a Stunning Smile and Body & Face Perfection
-                            </div>
-                        </div>
+
                     </div>
                 </div>
                 <svg class="contacts-page__bg" width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -122,17 +115,92 @@
                 <div class="container">
                     <div class="breadcrumbs__inner">
                         <a href="" class="breadcrumbs__item">Main</a>
-                        <span class="breadcrumbs__item">Our Blog</span>
+                        <a href="" class="breadcrumbs__item">Our Blog</a>
+                        <span class="breadcrumbs__item">From Consultation to Treatment: The Hassle-Free Process of Dental Tourism in Turkey</span>
                     </div>
                 </div>
             </div>
 
-            <section class="blog">
+            <section class="article">
                 <div class="container">
-                    <div class="blog__grid">
-                        <div class="blog__col">
-                            <div class="blog__items">
-                                <div class="blog-card">
+                    <div class="article__grid">
+                        <div class="article__content">
+                            <h1>From Consultation to Treatment: The Hassle-Free Process of Dental Tourism in Turkey</h1>
+                            <div class="article__date text15">
+                                June, 21, 2022
+                            </div>
+                            <img src="img/article.jpg" alt="" class="article__img">
+
+                            <hr>
+
+                            <h3>Consultation Process - Getting a Free Online Consultation</h3>
+                            <p>The first step in the medical tourism process in Turkey is to receive a free online consultation. This can be done by filling out a form on our website or contacting us dşirectly on whatsapp. Your medical advisor will then review your information and provide you with a treatment plan and cost estimate.</p>
+
+                            <hr>
+
+                            <h3>Treatment Plan and Cost - Understanding the Process</h3>
+                            <p>Once you receive your treatment plan and cost estimate, you can decide whether to proceed with the treatment. The cost estimate will include all expenses related to the treatment, including the cost of the treatment, accommodation, transportation, medications required. You will have the opportunity to ask any questions you may have before making a decision.</p>
+
+                            <hr>
+
+                            <h3>Booking Your Flights - Tips and Recommendations</h3>
+                            <p>After you have decided to proceed with the treatment, you will need to book your flights to Turkey. Flights is the only service we don’t arrange but we can provide recommendations for flight research, as well as help you book them. It is important to plan your trip in advance to ensure that you have enough time for the procedure and we have the availability.</p>
+
+                            <hr>
+
+                            <h3>Having Your Treatment Performed - What to Expect</h3>
+                            <p>On the day of your arrival, you will be picked up from the airport and brought to a hotel. Flights rarely arrive early enough to start the treatment the same day so you may have free time and rest. Next day you will be taken from the hotel to the dental or plastic surgery clinic. Your doctor will review your treatment plan with you and explain the procedure. Your patient advisor will always be with you to ensure that you are comfortable throughout the process. After the 1st day treatment is complete, you will be taken back to your hotel to rest or depending on the treatment type you will stay for a clinic overnight (for aesthetic surgery patients). This process will continue until your treatment and all required steps are completed.</p>
+
+                            <hr>
+
+                            <div class="article__images">
+                                <img src="img/article2.jpg" alt="" class="article__img">
+                                <img src="img/article3.jpg" alt="" class="article__img">
+                            </div>
+
+                            <hr>
+
+                            <h3>Post-Treatment Care - Tips for a Successful Recovery</h3>
+                            <p>After the treatment, it is important to follow the doctor’s instructions for post-treatment care. This may include taking medication, avoiding certain foods, and attending follow-up appointments.</p>
+
+                            <hr>
+
+                            <h3>Returning Home - Starting a New Chapter of Your Life</h3>
+                            <p>After your treatment is complete, you can return home with a brand new smile or your body or face transformation. CoDental and CoBeauty Turkey offer a hassle-free process leading you throughout every step you take in order to start a new chapter of your life with renewed confidence.</p>
+
+                            <hr>
+
+                            <h3>Conclusion - Why Dental Tourism and Medical Tourism in Turkey are a Stress-Free Process</h3>
+                            <p>Medical tourism in Turkey offers a hassle-free process for those seeking affordable and high-quality dental care. Here in CoDental and CoBeauty Turkey we handle every step of the process, from the initial consultation to post-treatment care, our patients can rest assured that they are in good hands with state-of-the-art facilities and the highly qualified doctor team we have. </p>
+
+                            <hr>
+
+                            <blockquote>
+                                <p>Join the hundreds of satisfied patients who have experienced the affordable luxury of medical tourism in CoDental and CoBeauty Turkey. Book your life changing getaway today via any contact features on our website.</p>
+                            </blockquote>
+                        </div>
+                        <div class="article__sidebar">
+                            <div class="share">
+                                <div class="share__title">Share</div>
+                                <a href="" class="share__link"><img src="img/tw.svg" alt=""></a>
+                                <a href="" class="share__link"><img src="img/fb2.svg" alt=""></a>
+                                <a href="" class="share__link"><img src="img/ig2.svg" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="posts">
+                <div class="container">
+                    <div class="text45 font2 bold-text">
+                        Recent posts
+                    </div>
+                    <div class="posts-slider">
+                        <div class="swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="blog-card">
     <div class="blog-card__img">
         <img src="img/blog.png" alt="">
     </div>
@@ -146,39 +214,9 @@
     </div>
 </div>
 
-                                <div class="blog-card">
-    <div class="blog-card__img">
-        <img src="img/blog2.png" alt="">
-    </div>
-    <div class="blog-card__title">
-        From Consultation to Treatment: The Hassle-Free Process of Dental Tourism in Turkey
-    </div>
-    <div class="blog-card__nav">
-        <a href="" class="blog-card__btn m-btn m-btn-blue">
-            <span>read more</span>
-        </a>
-    </div>
-</div>
-
-                                <div class="blog-card">
-    <div class="blog-card__img">
-        <img src="img/blog3.png" alt="">
-    </div>
-    <div class="blog-card__title">
-        Turkey Veneers Cost and Dental Implants Turkey Cost
-    </div>
-    <div class="blog-card__nav">
-        <a href="" class="blog-card__btn m-btn m-btn-blue">
-            <span>read more</span>
-        </a>
-    </div>
-</div>
-
-                            </div>
-                        </div>
-                        <div class="blog__col">
-                            <div class="blog__items">
-                                <div class="blog-card">
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="blog-card">
     <div class="blog-card__img">
         <img src="img/blog4.png" alt="">
     </div>
@@ -192,39 +230,9 @@
     </div>
 </div>
 
-                                <div class="blog-card">
-    <div class="blog-card__img">
-        <img src="img/blog5.png" alt="">
-    </div>
-    <div class="blog-card__title">
-        Turkey Veneers Cost and Dental Implants Turkey Cost
-    </div>
-    <div class="blog-card__nav">
-        <a href="" class="blog-card__btn m-btn m-btn-blue">
-            <span>read more</span>
-        </a>
-    </div>
-</div>
-
-                                <div class="blog-card">
-    <div class="blog-card__img">
-        <img src="img/blog6.png" alt="">
-    </div>
-    <div class="blog-card__title">
-        From Consultation to Treatment: The Hassle-Free Process of Dental Tourism in Turkey
-    </div>
-    <div class="blog-card__nav">
-        <a href="" class="blog-card__btn m-btn m-btn-blue">
-            <span>read more</span>
-        </a>
-    </div>
-</div>
-
-                            </div>
-                        </div>
-                        <div class="blog__col">
-                            <div class="blog__items">
-                                <div class="blog-card">
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="blog-card">
     <div class="blog-card__img">
         <img src="img/blog7.png" alt="">
     </div>
@@ -238,12 +246,14 @@
     </div>
 </div>
 
-                                <div class="blog-card">
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="blog-card">
     <div class="blog-card__img">
-        <img src="img/blog8.png" alt="">
+        <img src="img/blog7.png" alt="">
     </div>
     <div class="blog-card__title">
-        Turkey Veneers Cost and Dental Implants Turkey Cost
+        From Consultation to Treatment: The Hassle-Free Process of Dental Tourism in Turkey
     </div>
     <div class="blog-card__nav">
         <a href="" class="blog-card__btn m-btn m-btn-blue">
@@ -252,32 +262,22 @@
     </div>
 </div>
 
-                                <div class="blog-card">
-    <div class="blog-card__img">
-        <img src="img/blog9.png" alt="">
-    </div>
-    <div class="blog-card__title">
-        Turkey Veneers Cost and Dental Implants Turkey Cost
-    </div>
-    <div class="blog-card__nav">
-        <a href="" class="blog-card__btn m-btn m-btn-blue">
-            <span>read more</span>
-        </a>
-    </div>
-</div>
-
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="blog__nav">
-                        <button class="blog__btn m-btn m-btn-blue-outline">
-                            <span>show more posts</span>
-                        </button>
+                        <div class="swiper-button swiper-button-prev">
+                            <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M7.8 1.00455L1.6 6.5L7.8 11.9955C8.06667 12.2318 8.06667 12.6061 7.8 12.8227C7.53333 13.0591 7.11111 13.0591 6.86667 12.8227L0.2 6.91364C0.0666659 6.79545 -6.75577e-07 6.63788 -6.6955e-07 6.5C-6.63523e-07 6.36212 0.0666659 6.20455 0.2 6.08636L6.86667 0.177273C7.13333 -0.0590907 7.55556 -0.0590906 7.8 0.177273C8.06667 0.413636 8.06667 0.768181 7.8 1.00455Z" fill="white"/>
+                            </svg>
+                        </div>
+                        <div class="swiper-button swiper-button-next">
+                            <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.2 1.00455L6.4 6.5L0.2 11.9955C-0.0666667 12.2318 -0.0666667 12.6061 0.2 12.8227C0.466667 13.0591 0.888888 13.0591 1.13333 12.8227L7.8 6.91364C7.93333 6.79545 8 6.63788 8 6.5C8 6.36212 7.93333 6.20455 7.8 6.08636L1.13333 0.177273C0.866666 -0.0590907 0.444444 -0.0590906 0.199999 0.177273C-0.0666672 0.413636 -0.0666672 0.768181 0.2 1.00455Z" fill="white"/>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </section>
-
-
 
         </main>
         <footer class="footer">
