--- a/about.html
+++ b/about.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="CoDental">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Главная</title>
+    <link rel="icon" href="img/favicon.svg">
+    <title>CoDental</title>
 </head>
+
 
 <body class="page index-page">
     <div class="wrapper">
