--- a/nav.html
+++ b/nav.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="CoDental">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Главная</title>
+    <link rel="icon" href="img/favicon.svg">
+    <title>CoDental</title>
 </head>
+
 
 
 <style>
@@ -39,31 +41,66 @@
         <a href="blog.html" style="display: block; margin-bottom: 20px;">
             Blog
         </a>
+        <a href="blog-item.html" style="display: block; margin-bottom: 20px;">
+            Blog - Post
+        </a>
 
 
 
 
-<!--        <button style="border: 2px solid #000;margin-bottom: 20px;" data-bs-toggle="modal" data-bs-target="#quickOrder">-->
-<!--            Быстрый заказ-->
-<!--        </button>-->
+        <button style="border: 2px solid #000;margin-bottom: 20px;" data-modal="consultModal">
+            Have a questions?
+        </button>
 
     </div>
 
-    <div class="modal" id="quickOrder" aria-hidden="true">
-    <div class="modal-dialog">
-        <button type="button" class="modal__close" data-bs-dismiss="modal" aria-label="Close">
-            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M9.55401 10.5L2 2.94599L2.94599 2L10.5 9.55401L18.054 2L19 2.94599L11.446 10.5L19 18.054L18.054 19L10.5 11.446L2.94599 19L2 18.054L9.55401 10.5Z" fill="#333333"/>
+    <div class="modal" id="consultModal">
+    <div class="modal__bg _close-modal"></div>
+    <div class="modal__dialog">
+        <button class="modal__close _close-modal">
+            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g opacity="0.8">
+                    <path d="M1 17.3691L17.37 0.999126" stroke="#454A4C" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M17.3721 17.3691L1.00206 0.999126" stroke="#454A4C" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
             </svg>
         </button>
-
-
-
+        <div class="modal__scroll">
+            <div class="modal__info">
+                <div class="text24 font2 semi-bold-text">
+                    Have a questions?
+                </div>
+                <div class="text16">
+                    Leave your contacts and we will contact you
+                </div>
+            </div>
+            <form class="consult-form">
+                <fieldset class="fg">
+                    <label>
+                        <span>Your name</span>
+                    </label>
+                    <input type="text" placeholder="Name">
+                </fieldset>
+                <fieldset class="fg">
+                    <label>
+                        <span>Phone number</span>
+                    </label>
+                    <input type="tel" placeholder="Phone">
+                </fieldset>
+                <div class="consult-form__nav _full">
+                    <button class="consult-form__btn m-btn m-btn-pink">
+                        <span class="m-btn__inner">
+                            <span>Send</span>
+                        </span>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
 
-<!-- <div class="modal-backdrop show"></div> -->
+
     <!--  -->
     <script src="js/libs.min.js"></script>
 <script src="js/main.min.js"></script>
