--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@
                         Contact Us
                     </div>
                 </div>
-                <svg class="contacts-page__bg" width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="contacts-page__bg _view1" width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <mask id="mask0_190_92" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="346">
                         <rect width="1440" height="346" fill="#E4FAFD" fill-opacity="0.75"/>
                     </mask>
@@ -107,6 +107,39 @@
                             <stop offset="1" stop-color="#FF64C3" stop-opacity="0">
                                 <animate attributeName="stop-color" values="#FF64C3; #FF64C3; #FF64C3" dur="3.5s" repeatCount="indefinite"></animate>
                             </stop>
+                        </radialGradient>
+                    </defs>
+                </svg>
+                <svg class="contacts-page__bg _view2" width="1440" height="346" viewBox="0 0 1440 346" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <mask id="mask0_190_92" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="1440" height="346">
+                        <rect width="1440" height="346" fill="#E4FAFD" fill-opacity="0.75"/>
+                    </mask>
+                    <g mask="url(#mask0_190_92)">
+                        <g filter="url(#filter0_f_190_92)">
+                            <circle cx="718.5" cy="335.5" r="379.5" fill="url(#paint0_radial_190_92)"/>
+                        </g>
+                        <g filter="url(#filter1_f_190_92)">
+                            <circle cx="1215.5" cy="500.5" r="379.5" fill="url(#paint1_radial_190_92)"/>
+                        </g>
+                    </g>
+                    <defs>
+                        <filter id="filter0_f_190_92" x="139" y="-244" width="1159" height="1159" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                            <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_190_92"/>
+                        </filter>
+                        <filter id="filter1_f_190_92" x="636" y="-79" width="1159" height="1159" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
+                            <feGaussianBlur stdDeviation="100" result="effect1_foregroundBlur_190_92"/>
+                        </filter>
+                        <radialGradient id="paint0_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(718.5 335.5) rotate(90) scale(379.5)">
+                            <stop stop-color="#5BECF1"/>
+                            <stop offset="1" stop-color="#5BECF1" stop-opacity="0"/>
+                        </radialGradient>
+                        <radialGradient id="paint1_radial_190_92" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(1215.5 500.5) rotate(90) scale(379.5)">
+                            <stop stop-color="#FF64C3"/>
+                            <stop offset="1" stop-color="#FF64C3" stop-opacity="0"/>
                         </radialGradient>
                     </defs>
                 </svg>
